# minishell

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  minishell
.github/workflows/: main.yml
includes/: exe.h  minishell.h  parser.h
lib/libft/: .gitignore  CMakeLists.txt
lib/libft/printf/utils/: utils.c
lib/libft/srcs/lst/: ft_lstadd_front.c  ft_lstinsert.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lstunlink.c
lib/libft/srcs/mem/: ft_memchr.c  ft_memcpy.c  ft_memset.c
lib/libft/srcs/put/: ft_putchar_fd.c  ft_putnbr_fd.c
lib/libft/srcs/str/: ft_strarrexists.c  ft_strchr.c  ft_strcpy.c  ft_strlcpy.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnjoin.c  ft_strnstr.c
lib/libft/tests/: CMakeLists.txt
lib/readline-7.0/: Makefile  config.status  readline.pc
lib/readline-7.0/doc/: Makefile
lib/readline-7.0/examples/: Makefile
lib/readline-7.0/lib/: libhistory.7.0.dylib  libhistory.7.0.dylib.old  libhistory.old  libreadline.7.0.dylib  libreadline.7.0.dylib.old  libreadline.old
lib/readline-7.0/shlib/: Makefile  libhistory.7.0.dylib  libreadline.7.0.dylib
libft/: Makefile
libft/includes/: get_next_line.h  libft.h  printf.h
libft/srcs/lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstget.c  ft_lstinsert.c  ft_lstiter.c  ft_lstlast.c  ft_lstunlink.c
libft/srcs/mem/: ft_memccpy.c  ft_memcmp.c  ft_memmove.c
libft/srcs/put/: ft_putendl_fd.c  ft_putstr_fd.c
libft/srcs/str/: ft_strarrdup.c  ft_strarrfree.c  ft_strarrlen.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnjoin.c  ft_strrchr.c  ft_strtrim.c
libft/tests/: test_stringmanip.c
srcs/: main.c
srcs/env/: env_del.c  env_from_envp.c  env_init.c  env_lst_add_back.c  env_lst_del.c  env_lst_get.c  env_lst_len.c  env_lst_put.c  env_new.c  env_to_envp.c
srcs/executor/: exe.c  exe.h  exe_cmd.c  exe_paths.c  exe_pipe.c  execute_single.c  executor.c
srcs/executor/ARCHIVE/: exe.c  exe_cmd.c
srcs/executor/builtins/: bi_cd.c  bi_check.c  bi_echo.c  bi_env.c  bi_exit.c  bi_export.c  bi_export_utils.c  bi_init.c  bi_pwd.c  bi_unset.c  bi_utils.c
srcs/executor/dup/: dup.c  dup_cmd.c  dup_pipes.c  dup_redirect.c
srcs/executor/execute/: execute.c  execute_builtin.c
srcs/executor/fork/: fork.c
srcs/executor/path/: path_init.c  path_of_cmd.c  path_store.c
srcs/executor/pipe/: pipe.c  pipe_close.c  pipe_fds_del.c  pipe_free_fds.c  pipe_malloc_fds.c
srcs/pair/: pair_del.c  pair_join.c  pair_new.c
srcs/parser/: create_redir_files.c  parse_input_string.c  resolve_dollar.c  resolve_dollar_heredoc.c  write_heredoc.c
srcs/parser/node/: node_del.c  node_new.c  node_utils.c
srcs/parser/redir/: redir_del.c  redir_lst_add.c  redir_lst_del.c  redir_lst_dup.c  redir_merge.c  redir_new.c  redir_type.c  redirs_merge.c
srcs/shell/: init_inputrc.c  shell_destroy.c  shell_exit.c  shell_init.c  shell_noninteractive.c  signals.c
tests/: CMakeLists.txt  all_tests.txt  minishell_tester.sh  tests.txt
tests/syntax/: syntax_error_pipe.txt  syntax_error_redirect.txt
tests/unittests/: test_env.cpp  test_executor.cpp  test_node.cpp  test_pair.cpp  test_parser.cpp  test_parser_redir.cpp  test_redir.cpp  test_shell.cpp  test_token.cpp  test_token_dollars.cpp  test_token_normalize.cpp  test_token_quotes.cpp  test_token_syntax.cpp  test_token_wordsplitting.cpp  unittest.hpp
(+27 files in other folders)
